# chatbot-backend

./: .env.sample  .gitignore  INSTALL.md  README.md  docker-compose.yml  pyproject.toml
chroma_langchain_db/: chroma.sqlite3
database/scripts/: README.md  dbcreate.sql
database/seeds/: index.py  usuarios.py
src/: main.py
src/application/autentificacion/controllers/: autentificacion.py
src/application/autentificacion/middleware/: jwtValidator.py
src/application/autentificacion/models/: index.py
src/application/autentificacion/repositories/: usuarios.py
src/application/autentificacion/schemas/: index.py
src/application/autentificacion/services/: authentication.py  usuario.py
src/application/baseConocimiento/controllers/: documentos.py  preguntas.py
src/application/baseConocimiento/models/: index.py
src/application/baseConocimiento/repositories/: conocimiento.py  documentos.py  preguntas.py
src/application/baseConocimiento/schemas/: index.py
src/application/baseConocimiento/services/: conocimiento.py  documentos.py  preguntas.py
src/application/comunicacion/controllers/: comunicacion.py  sincronizacion.py
src/application/comunicacion/schemas/: index.py
src/application/comunicacion/services/: comunicacion.py  sincronizacion.py
src/bot/: bot.py  handle.py
src/bot/constante/: index.py
src/bot/templates/: contexto.py
src/common/: baseSingleton.py
src/common/constantes/: index.py
src/common/models/: auditoriaBase.py
src/common/utils/: bcrypt.py  responseFormatter.py
src/config/: chatbot.py  database.py
src/database/: chatbotDB.py
(+7 files in other folders)
